# tmdb

./: README.md  project_configure.json  pyproject.toml  setup.py
tmdb/: __config__.py  __init__.py  main.py
