[tool.qpro]
[[tool.qpro.server_targets]]
user = "lianhaocheng"
host = "localhost"
port = 22
path = "/opt/homebrew/lib/python3.13/site-packages/"

[tool.qpro.config]
build = ""
entry_point = "tmdb/main.py"
executable = "python3 -m tmdb.main"
input_file = ""
template_root = ""
enable_complete = true

[tool.poetry]
name = "tmdb"
version = "0.0.5"
description = "A Commander APP for The Movice DB"
authors = ["Rhythmicc <rhythmlian.cn@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
qpro = "^0.13.1"
QuickStart-Rhy = "^0.7.30"

[tool.poetry.scripts]
tmdb = "tmdb.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
